<resources>
    <string name="app_name">由来网</string>
    <string name="cooking_oil_declare">食用油采购量申报</string>
    <string name="refuse_oil_declare"> 废弃油 / 餐厨申报</string>
    <string name="notice">公告</string>
    <string name="conversion_ratio">转化比例</string>
    <string name="near_mess">附近餐厅</string>
    <string name="user_comment">用户评论</string>
    <string name="qr_code">餐厅二维码</string>
    <string name="setting">设置</string>
    <string name="logout">注销</string>
    <string name="change_psw">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="software_update">软件更新</string>
    <string name="message">消息</string>
    <string name="help">帮助</string>
    <string name="old_psw">原始密码</string>
    <string name="input_old_psw">输入您的原始密码</string>
    <string name="new_psw">新密码</string>
    <string name="input_psw">请输入密码(6-16位)</string>
    <string name="new_psw_affirm">确认新密码</string>
    <string name="input_psw_again">请再次输入密码(6-16位)</string>
    <string name="ensure">确  定</string>
    <string name="exit">退 出</string>
    <string name="psw">密码</string>
    <string name="id">账号</string>
    <string name="rember_psw"><![CDATA[ 记住密码]]></string>
    <string name="free_register">免费注册</string>
    <string name="forget_psw">忘记密码</string>
    <string name="login">登  录</string>
    <string name="login_main">登录</string>
    <string name="phone_num">手机号</string>
    <string name="input_phone_num">请输入负责人的手机号码</string>
    <!--请输入您的手机号码-->
    <string name="code">验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="code_outTime">(请在60秒内完成验证,超时请点击重新发送)</string>
    <string name="register_next">注册下一步</string>
    <string name="register">注  册</string>
    <string name="agree_agreement"><![CDATA[  我同意]]></string>
    <string name="restaurant_pic">请上传相关证件 ( 必填 )</string>
    <!--餐厅图片-->
    <string name="restaurant_name">商家名称 ( 必填 )</string>
    <string name="input_restaurant_name">请输入您商家的详细名称,如: xxx商家分店</string>
    <string name="cooking_type">主体业态 ( 必填 )</string>
    <string name="input_cooking_type">行业类型</string>
    <string name="restaurant_address">餐厅地址 ( 必填 )</string>
    <string name="street_address">请选择街道</string>
    <string name="input_restaurant_address">请输入您餐厅的详细地址</string>
    <string name="restaurant_phone">餐厅电话 ( 必填 )</string>
    <string name="input_restaurant_phone">请输入您餐厅的电话</string>
    <string name="restaurant_name2">餐厅名称:</string>
    <string name="restaurant_address2">餐厅地址:</string>
    <string name="declare_count">采购数量</string>
    <string name="L">公斤</string>
    <string name="submit">提交</string>
    <string name="input_oil_num">请输入交油数量</string>
    <string name="junk">餐厨垃圾</string>
    <string name="input_junk_num">请输入厨房垃圾桶数</string>
    <string name="barrel">桶</string>
    <string name="declare">申报</string>
    <string name="share">分  享</string>
    <string name="intnet_err">网络异常</string>
    <string name="procurement_analyze">服务升级中，敬请期待</string>
    <string name="gongyingshang">供应商(必填)</string>
    <string name="input_gongyingshang_num">请输入供应商名称</string>
    <string name="gongyingshang_phone">供应商电话(必填)</string>
    <string name="input_gongyingshang_phone">请输入供应商电话</string>
    <string name="register_user_number">食品经营许可证编号</string>
    <string name="register_user_number_input">请输入您的食品经营许可证编号</string>
    <string name="register_business_num">营业执照编号</string>
    <string name="register_business_num_input">请输入您的营业执照编号</string>
    <string name="gongyingshang_contacts">供应商联系人</string>
    <string name="input_gongyingshang_contacts">请输入供应商联系人</string>
    <string name="add_baozhiqixian"><u>添加保质期限</u></string>
    <string name="add_shenchanpihao"><u>添加生产批号</u></string>
    <string name="save_data">是否保存填写数据，并返回上一页?</string>
    <string name="new_data"><u>+ 新条目</u></string>

    <string name="gongyingshang_one">供应商(生产)</string>
    <string name="gongyingshang_two">进货台账</string>
    <string name="gongyingshang_three">供应商(餐饮)</string>
    <string name="originalbill_one">原料票据</string>
    <string name="originalbill_two">仓库台账(流入)</string>
    <string name="originalbill_three">台账明细(餐饮)</string>
    <string name="repositorybillsell_one">仓库台账(销售)</string>
    <string name="repositorybillsell_two">出货台账</string>
    <string name="production_one">仓库台账(入库)</string>
    <string name="pasttimeproduct">问题产品或临期产品处置记录</string>

    <string name="bill_all_data">请上传本次不合格产品所有相关票据</string>
    <string name="bill_all_good_data">请上传本次所有相关票据及产品合格证</string>
    <string name="register_data">请上传营业执照、食品经营许可证及其他证件</string>

    <string name="select_product_ming_xi">请选择商品明细</string>
    <string name="wanshan_product_ming_xi">请填写商品明细</string>

    <string name="registering">正在注册</string>
    <string name="tiaozhuanging">正在跳转</string>
    <string name="chulifangshi">请选择处理方式</string>
    <string name="zui_da_ku_chun">已达到最大库存</string>
    <string name="ku_chun_updata_success">库存数据更新成功</string>
    <string name="add_ku_chun">您尚未添加商品入库，请添加商品入库</string>
    <string name="erweima_message">将二维码放入框内,即可自动扫描</string>

    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="shaomiao_error">未能分析该二维码数据，请重新扫描</string>
    <string name="mingxi_edit">(点击明细数值可编辑)</string>

    <array name="ding_dan_titles">
        <item>全部</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>已取消</item>
    </array>
    <array name="shangpin_title">
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>待评价</item>
    </array>
    <!--城市测试数据-->
    <string-array name="arr_city">
        <item>北京首都</item>
        <item>上海虹桥</item>
        <item>上海浦东</item>
        <item>广州</item>
        <item>深圳</item>
        <item>香港</item>
        <item>澳门</item>
        <item>天津</item>
        <item>成都</item>
        <item>重庆</item>
        <item>南京</item>
        <item>青岛</item>
        <item>珠海</item>
        <item>福州</item>
        <item>哈尔滨</item>
        <item>大连</item>
        <item>海口</item>
        <item>沈阳</item>
        <item>厦门</item>
        <item>安庆</item>
        <item>鞍山</item>
        <item>阿克苏</item>
        <item>阿勒泰</item>
        <item>安康</item>
        <item>北京南苑</item>
        <item>保山</item>
        <item>包头</item>
        <item>北海</item>
        <item>蚌埠</item>
        <item>成都</item>
        <item>长沙</item>
        <item>长春</item>
        <item>常德</item>
        <item>长治</item>
        <item>常州</item>
        <item>朝阳</item>
        <item>赤峰</item>
        <item>敦煌</item>
        <item>大理</item>
        <item>达县</item>
        <item>东营</item>
        <item>丹东</item>
        <item>大同</item>
        <item>恩施</item>
        <item>福州</item>
        <item>阜阳</item>
        <item>富蕴</item>
        <item>广州</item>
        <item>桂林</item>
        <item>贵阳</item>
        <item>格尔木</item>
        <item>广汉</item>
        <item>赣州</item>
        <item>海口</item>
        <item>哈尔滨</item>
        <item>杭州</item>
        <item>合肥</item>
        <item>黄山</item>
        <item>呼和浩特</item>
        <item>海拉尔</item>
        <item>哈密</item>
        <item>汉中</item>
        <item>黑河</item>
        <item>衡阳</item>
        <item>和田</item>
        <item>黄岩</item>
        <item>吉林</item>
        <item>济南</item>
        <item>九江</item>
        <item>九寨黄龙</item>
        <item>吉安</item>
        <item>佳木斯</item>
        <item>嘉峪关</item>
        <item>济宁</item>
        <item>景德镇</item>
        <item>景洪</item>
        <item>晋江</item>
        <item>锦州</item>
        <item>酒泉</item>
        <item>昆明</item>
        <item>克拉玛依</item>
        <item>喀什</item>
        <item>库尔勒</item>
        <item>库车</item>
        <item>洛阳</item>
        <item>兰州</item>
        <item>拉萨</item>
        <item>连云港</item>
        <item>丽江</item>
        <item>临沂</item>
        <item>柳州</item>
        <item>泸州</item>
        <item>芒市</item>
        <item>梅县</item>
        <item>绵阳</item>
        <item>牡丹江</item>
        <item>满洲里</item>
        <item>南京</item>
        <item>宁波</item>
        <item>南昌</item>
        <item>南宁</item>
        <item>南通</item>
        <item>南充</item>
        <item>南阳</item>
        <item>青岛</item>
        <item>秦皇岛</item>
        <item>齐齐哈尔</item>
        <item>泉州</item>
        <item>衢州</item>
        <item>且末</item>
        <item>庆阳</item>
        <item>上海虹桥</item>
        <item>上海浦东</item>
        <item>汕头</item>
        <item>石家庄</item>
        <item>苏州</item>
        <item>三亚</item>
        <item>沙市</item>
        <item>思茅</item>
        <item>天津</item>
        <item>塔城</item>
        <item>太原</item>
        <item>通化</item>
        <item>通辽</item>
        <item>铜仁</item>
        <item>温州</item>
        <item>武汉</item>
        <item>武汉王家</item>
        <item>无锡</item>
        <item>乌鲁木齐</item>
        <item>威海</item>
        <item>梧州</item>
        <item>万县</item>
        <item>潍坊</item>
        <item>乌兰浩特</item>
        <item>武夷山</item>
        <item>徐州</item>
        <item>西安</item>
        <item>西宁</item>
        <item>西昌</item>
        <item>襄樊</item>
        <item>锡林浩特</item>
        <item>银川</item>
        <item>延安</item>
        <item>延吉</item>
        <item>烟台</item>
        <item>盐城</item>
        <item>宜宾</item>
        <item>宜昌</item>
        <item>伊宁</item>
        <item>义乌</item>
        <item>永州</item>
        <item>榆林</item>
        <item>珠海</item>
        <item>昭通</item>
        <item>张家界</item>
        <item>湛江</item>
        <item>芷江</item>
        <item>中甸</item>
        <item>舟山</item>
        <item>遵义</item>
        <item>郑州</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="register_user_expirydate">食品经营许可证到期时间</string>
    <string name="register_user_expirydate_input">请点选证件有效期</string>

    <string name="register_business_expirydate">营业执照或其他证件到期时间</string>
    <string name="register_business_expirydate_input">请点选执照或证件有效期</string>


</resources>
