<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <include layout="@layout/act_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/id"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_17" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="6dp"
        android:background="@mipmap/ed_bt"
        android:hint="@string/input_phone_num"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:id="@+id/tv_verify_phone"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="3dp"
        android:text="请填写正确的手机号"
        android:textColor="@color/yello"
        android:textSize="@dimen/text_size_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/psw"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_17" />

    <EditText
        android:id="@+id/ed_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="6dp"
        android:background="@mipmap/ed_bt"
        android:hint="@string/input_psw"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:id="@+id/tv_verify_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="3dp"
        android:visibility="invisible"
        android:textColor="@color/yello"
        android:textSize="@dimen/text_size_13" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/cb_rember_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:button="@drawable/selector_checked"
            android:text="@string/rember_psw"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_free_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="97dp"
            android:layout_toEndOf="@+id/cb_rember_psw"
            android:layout_toRightOf="@+id/cb_rember_psw"
            android:text="@string/free_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/tv_free_register"
            android:layout_toRightOf="@+id/tv_free_register"
            android:text="@string/forget_psw"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="登录成功"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:textColor="@color/yello"
            android:textSize="@dimen/text_size_13" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:background="@mipmap/button"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_17" />
    </RelativeLayout>


</LinearLayout>