<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/refuse_bg"
    android:orientation="vertical">

    <include layout="@layout/act_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/restaurant_name2"
            android:textColor="@color/white_simple"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="海底捞火锅(世界城光谷店)"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/restaurant_address2"
            android:textColor="@color/white_simple"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="武汉洪山区世界城广场5楼"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="50dp"
        android:text="交油数量"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp">

        <EditText
            android:id="@+id/et_litre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bill"
            android:hint="@string/input_oil_num"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_simple"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/L"
            android:textColor="@color/yello"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/junk"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp">

        <EditText
            android:id="@+id/et_junk_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bill"
            android:hint="@string/input_junk_num"
            android:inputType="number"
            android:maxLength="7"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_simple"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/barrel"
            android:textColor="@color/yello"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/yello"
            android:textSize="@dimen/text_size_13" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@mipmap/button"
            android:text="@string/declare"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>

</LinearLayout>