<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/menu_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@mipmap/back" />

    <com.bm.chengshiyoutian.youlaiwang.oldall.oldview.view.RoundImageView
        android:id="@+id/photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@mipmap/touxiang" />

    <TextView
        android:id="@+id/tv_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="餐厅名称"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_15" />

    <RatingBar
        android:id="@+id/app_ratingbar"
        style="@style/roomRatingBar2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:isIndicator="true"
        android:numStars="5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="35dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_cooking_oil_declare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/cooking_oil_declare"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_refuse_oil_declare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/refuse_oil_declare"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/notice"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_conversion_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/conversion_ratio"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_near_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/near_mess"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_user_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_comment"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <TextView
                android:id="@+id/tv_qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/qr_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_view" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="60dp">

                <TextView
                    android:id="@+id/tv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/setting"
                    android:textColor="@color/yello" />

                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/yello"
                    android:layout_alignTop="@+id/tv_setting"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="25dp"
                    android:layout_marginEnd="25dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>